--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -14,39 +14,30 @@ services:
     image: mongo:latest
     container_name: "mongodb"
     environment:
-        - MONGO_DATA_DIR=/data/db
-        - MONGO_LOG_DIR=/dev/null
+      - MONGO_DATA_DIR=/data/db
+      - MONGO_LOG_DIR=/dev/null
     volumes:
-        - ./data/db:/data/db
+      - ./data/db:/data/db
     ports:
-        - 27017:27017
+      - 27017:27017
   zookeeper:
-    image: wurstmeister/zookeeper:3.4.6
+    image: wurstmeister/zookeeper:latest
     expose:
       - "2181"
     restart: always
     container_name: zookeeper
-
   kafka:
-    image: wurstmeister/kafka:2.12-2.3.0
-    depends_on:
-      - zookeeper
+    image: wurstmeister/kafka:latest
     ports:
-      - "9093:9093"
+      - "9092:9092"
     expose:
       - "9092"
+      - "2181"
     environment:
-      KAFKA_CREATE_TOPICS: "datacache_topic"
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://localhost:9093
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_LISTENERS: INSIDE://0.0.0.0:9092,OUTSIDE://0.0.0.0:9093
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_CREATE_TOPICS: "restore_user"
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-    restart: always
-    container_name: kafka
-
-  swagger:
-    image: quay.io/goswagger/swagger
-    container_name: swagger-go-server 
-    ports:
-        - 8090:8090
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      - zookeeper
