--- a/deployments/k8s/k8-apiservice-deploy.yml
+++ b/deployments/k8s/k8-apiservice-deploy.yml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: apiservice
           image: badhmanabanm/datacache:latest
+          imagePullPolicy: Always
           resources:
             limits:
               cpu: 10m
@@ -40,6 +41,8 @@ metadata:
 spec:
   selector:
     app: apiservice
+  externalIPs:  
+    - 192.168.39.140
   ports:
     - name: http
       port: 80
@@ -76,7 +79,10 @@ data:
           "pool_conn_maxidle_time": 60000,
           "pool_limit": 100
         },
-        "backupServiceURL": "127.0.0.1:9001"
+        "kafka": {
+          "broker_address" : ["kafka:9092"],
+          "topic": "restore_user"
+        }
       }
 kind: ConfigMap
 metadata:
